--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,8 +17,8 @@ security:
             lazy: true
             provider: app_user_provider
             form_login:
-                login_path: app_login
-                check_path: app_login
+                login_path: app_home
+                check_path: app_home
                 enable_csrf: true
             logout:
                 path: app_logout
