--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
         "@types/react": "^19.1.4",
         "@types/react-dom": "^19.1.4",
         "babel-loader": "^10.0.0",
+        "bootstrap": "^5.3.6",
         "core-js": "^3.38.0",
         "regenerator-runtime": "^0.13.9",
+        "sass": "^1.88.0",
+        "sass-loader": "^16.0.5",
         "ts-loader": "^9.5.2",
         "typescript": "^5.8.3",
         "webpack": "^5.99.8",
