--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
         "@symfony/stimulus-bridge": "^3.2.0 || ^4.0.0",
         "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
         "@symfony/webpack-encore": "^5.0.0",
+        "@types/jest": "^29.5.14",
         "@types/react": "^19.1.4",
-        "@types/react-dom": "^19.1.4",
+        "@types/react-dom": "^19.1.5",
         "babel-loader": "^10.0.0",
         "bootstrap": "^5.3.6",
         "core-js": "^3.38.0",
