--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,5 +7,6 @@ controllers:
 api_controllers:
     resource: ../src/Controller/Api/
     type: attribute
+    #condition: request.isXmlHttpRequest()
     prefix: '/api/v1'
     name_prefix: 'api_'
