--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,10 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+api_controllers:
+    resource: ../src/Controller/Api/
+    type: attribute
+    #condition: request.isXmlHttpRequest()
+    prefix: '/api/v1'
+    name_prefix: 'api_'
